<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_grid"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_mammals"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorAccent"
             />
    </LinearLayout>


    <GridLayout
        android:id="@+id/image_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout">

        <ImageView
            android:id="@+id/image_bear"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/bear"
            android:src="@drawable/bear" />

        <ImageView
            android:id="@+id/image_wolf"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/wolf"
            android:src="@drawable/wolf"/>

        <ImageView
            android:id="@+id/image_elephant"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/elephant"
            android:src="@drawable/elephant" />

        <ImageView
            android:id="@+id/image_lamb"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/lamb"
            android:src="@drawable/lamb"/>

    </GridLayout>






</android.support.constraint.ConstraintLayout>