<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_grid"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_birds"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>


    <GridLayout
        android:id="@+id/image_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_layout">

        <ImageView
            android:id="@+id/image_eagle_owl"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/eagle_owl_bird"
            android:src="@drawable/eagle_owl"
            app:layout_constraintRight_toLeftOf="@+id/image_finch" />

        <ImageView
            android:id="@+id/image_finch"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/finch"
            android:src="@drawable/finch"
            app:layout_constraintLeft_toRightOf="@+id/image_eagle_owl" />

        <ImageView
            android:id="@+id/image_wren"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/wren"
            android:src="@drawable/wren"
            app:layout_constraintRight_toLeftOf="@+id/image_bullfinch"
            app:layout_constraintTop_toBottomOf="@+id/image_eagle_owl" />

        <ImageView
            android:id="@+id/image_bullfinch"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:scaleType="fitXY"
            android:contentDescription="@string/bullfinch"
            android:src="@drawable/bullfinch"
            app:layout_constraintLeft_toRightOf="@+id/image_wren"
            app:layout_constraintTop_toBottomOf="@+id/image_finch" />

    </GridLayout>






</android.support.constraint.ConstraintLayout>